--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+/* Custom scrollbar */
+/* width */
+::-webkit-scrollbar {
+    @apply w-0 md:w-[5px];
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    @apply bg-gray-light;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    @apply bg-gray-dark;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-darker;
+  }
