forget password functionality completed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -93,3 +93,15 @@
 #calendar .react-calendar__month-view__days__day--weekend {
   @apply text-red-500;
 }
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
